--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,7 @@ footer {
 .user-container, .container {
     padding-bottom: 100px; /* 在容器下方留出空白 */
 }
+
+.container {
+    padding-bottom: 100px; /* 在容器下方留出空白 */
+}
