--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ footer {
 .container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     padding-bottom: 100px;
 }
 
